# Rpi-pico-i2c-example

./: README.md
i2c_example/: CMakeLists.txt  example.c
